--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}  # Use the default GitHub token
+        github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}  # Use the default GitHub token
         publish_dir: ./out
         publish_branch: gh-pages
         allow_empty_commit: false
