--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -15,7 +15,8 @@
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5204",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "KEY_ENCRYPTION_KEY": "xh9OfsPjK+Lntk10kRf1XeX0kXTAhhSNKFLExf6HdKw="
       }
     },
     "https": {
@@ -24,14 +25,16 @@
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7217;http://localhost:5204",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "KEY_ENCRYPTION_KEY": "xh9OfsPjK+Lntk10kRf1XeX0kXTAhhSNKFLExf6HdKw="
       }
     },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "KEY_ENCRYPTION_KEY": "xh9OfsPjK+Lntk10kRf1XeX0kXTAhhSNKFLExf6HdKw="
       }
     }
   }
