Almost Almost Finished

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,14 +1,14 @@
 {
-   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=SocialWelfareDepartment;User=sa;Password=U$m1e$k@;TrustServerCertificate=true;"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=SocialWelfareDepartment;User=sa;Password=U$m1e$k@;TrustServerCertificate=true;MultipleActiveResultSets=true;"
   },
-  "EmailSettings":{
-    "SenderName":"Social Welfare Department",
-    "SenderEmail":"websiterandom24@gmail.com",
-    "SmtpServer":"smtp.gmail.com",
-    "SmtpPort":587,
-    "Username":"websiterandom24@gmail.com",
-    "Password":"uuku vmsm auwi livn"
+  "EmailSettings": {
+    "SenderName": "Social Welfare Department",
+    "SenderEmail": "websiterandom24@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "Username": "websiterandom24@gmail.com",
+    "Password": "uuku vmsm auwi livn"
   },
   "Logging": {
     "LogLevel": {
@@ -17,10 +17,7 @@
     }
   },
   "FileWatch": {
-    "Excludes": [
-      "wwwroot/uploads/**",
-      "wwwroot/files/**"
-    ]
+    "Excludes": ["wwwroot/uploads/**", "wwwroot/files/**"]
   },
   "AllowedHosts": "*"
 }
