--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,11 +1,11 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
-    "windowsAuthentication": false,
+    "windowsAuthentication": true,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:29248",
-      "sslPort": 44338
+      "applicationUrl": "http://localhost:8081",
+      "sslPort": 0
     }
   },
   "profiles": {
