--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=SocialWelfareDepartment;User=sa;Password=U$m1e$k@;TrustServerCertificate=true;MultipleActiveResultSets=true;"
+    "DefaultConnection": "Server=172.17.0.2;Database=SocialWelfareDepartment;User=sa;Password=U$m1e$k@;TrustServerCertificate=true;MultipleActiveResultSets=true;"
   },
   "EmailSettings": {
     "SenderName": "Social Welfare Department",
